--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../styles.css">
     </head>
 
-<body onload="loadPageInfo()">
+<body>
     <div class="container">
         <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">Komputerstore</a>
